@@ -116,8 +116,6 @@ container_impl panefactory_implObj::last_container_impl()
 
 void panefactory_implObj::created_at(const element &e, size_t position)
 {
-	grid_map_t::lock lock{layout->impl->grid_map};
-
 	auto info=({
 			new_pane_info_t::lock lock{new_pane_info};
 
@@ -145,7 +143,7 @@ void panefactory_implObj::created_at(const element &e, size_t position)
 					*this,
 					e,
 					position,
-					lock);
+					layout->grid_lock);
 }
 
 focusable_container panefactory_implObj
